--- a/#style.css
+++ b/#style.css
@@ -1,29 +1,33 @@
-body{
+body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background:#f9f9f9;
-    color:#333;
-    margin:0;
-    padding:0;
-
-}
-header{
-    background:lightblue;
-    color:#fff;
-    padding:20px;
-    text-align:center;
+    background: #f9f9f9;
+    color :#333;
+    margin: 0;
+    padding: 0;
 }
 
-.about{
+header {
+    background :blue;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+section {
+    padding: 20px;
+    margin: 10px auto;
+    max-width: 600px;
+    background: white;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.113);
+}
+.about {
     padding: 20px;
     margin: 10px auto;
     max-width: 600px;
     background: #f9f9f9;
     border-radius: 15px;
-    box-shadow:0 2px 5px rgba(0,0,0,0.113);
-
-}
-h2{
-    color:lightblue;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.113);
 }
 
 footer{
